# engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
bindings/dotnet/: .gitignore  LICENSE  Moonlitt.sln
crates/moonlitt-analyze/: Cargo.toml
crates/moonlitt-analyze/src/: anomaly.rs  lib.rs  loudness.rs  peak.rs  report.rs  wav.rs
crates/moonlitt-audio-io/: Cargo.toml
crates/moonlitt-audio-io/src/: audio_output.rs  lib.rs  runtime.rs
crates/moonlitt-audio-io/tests/: e2e_test.rs  event_test.rs  midi_test.rs  runtime_test.rs  sequencer_test.rs  transport_test.rs
crates/moonlitt-bench/: Cargo.toml
crates/moonlitt-bench/benches/: effects_bench.rs
crates/moonlitt-capi/: Cargo.toml  cbindgen.toml
crates/moonlitt-capi/src/: builtin_api.rs  engine_api.rs  error.rs  lib.rs  runtime_api.rs  session_api.rs  shadow.rs  util.rs
crates/moonlitt-capi/tests/: ffi_test.rs
crates/moonlitt-clap/: Cargo.toml
crates/moonlitt-clap/src/: error.rs  events.rs  host.rs  lib.rs  module.rs  scanner.rs
crates/moonlitt-clap/tests/: scan_test.rs
crates/moonlitt-cli/: Cargo.toml
crates/moonlitt-cli/src/: main.rs  wav.rs
crates/moonlitt-cli/tests/: keyscape_warmup_test.rs
crates/moonlitt-compressor/: Cargo.toml
crates/moonlitt-compressor/src/: compressor.rs  lib.rs
crates/moonlitt-convolver/: Cargo.toml
crates/moonlitt-convolver/src/: convolver.rs  lib.rs  partition.rs
crates/moonlitt-core/: Cargo.toml
crates/moonlitt-core/src/: caps.rs  event.rs  host.rs  lib.rs  null_backend.rs
crates/moonlitt-core/tests/: core_types.rs
crates/moonlitt-effects/: Cargo.toml
crates/moonlitt-effects/src/: lib.rs
crates/moonlitt-effects/src/common/: db_lut.rs  denormal.rs  mod.rs  oversampler.rs  param_smoother.rs  simd.rs
crates/moonlitt-effects/src/distortion/: bitcrusher.rs  mod.rs  saturator.rs
crates/moonlitt-effects/src/dynamics/: compressor.rs  deesser.rs  envelope.rs  gate.rs  limiter.rs  mod.rs  multiband_compressor.rs
crates/moonlitt-effects/src/eq/: biquad.rs  mod.rs  parametric.rs
crates/moonlitt-effects/src/modulation/: auto_filter.rs  chorus.rs  delay.rs  delay_line.rs  flanger.rs  lfo.rs  mod.rs  phaser.rs  pitch_shifter.rs  tremolo.rs
crates/moonlitt-effects/src/spatial/: comb.rs  convolver.rs  dattorro.rs  mod.rs  mod_allpass.rs  partition.rs  reverb.rs
crates/moonlitt-effects/src/utility/: gain.rs  mod.rs  stereo_width.rs
crates/moonlitt-engine/: Cargo.toml
crates/moonlitt-engine/src/: backend.rs  engine.rs  error.rs  lib.rs  plugin_info.rs
crates/moonlitt-engine/src/backends/: clap.rs  mod.rs  oxisynth.rs  sampler.rs  sf2.rs  vst3.rs
crates/moonlitt-engine/tests/: engine_test.rs  vst3_rt_safety.rs  vst3_shared_handle.rs
crates/moonlitt-eq/: Cargo.toml
crates/moonlitt-eq/src/: biquad.rs  eq.rs  lib.rs
crates/moonlitt-ffi/: Cargo.toml
crates/moonlitt-ffi/src/: builtin_api.rs  engine_api.rs  lib.rs  runtime_api.rs
crates/moonlitt-ffi/tests/: ffi_test.rs
crates/moonlitt-mixer/: Cargo.toml
crates/moonlitt-mixer/src/: channel.rs  dither.rs  lib.rs  meter.rs  mixer.rs  mixer_tests.rs  render.rs
crates/moonlitt-node/: Cargo.toml  index.d.ts  index.js  moonlitt.node  package-lock.json  package.json
crates/moonlitt-node/src/: effects.rs  engine.rs  lib.rs  session.rs  types.rs
crates/moonlitt-resampler/: Cargo.toml
crates/moonlitt-resampler/src/: lib.rs  sinc.rs  (+2 more)
crates/moonlitt-reverb/: Cargo.toml
crates/moonlitt-reverb/src/: allpass.rs  comb.rs  dattorro.rs  lib.rs  mod_allpass.rs  reverb.rs
crates/moonlitt-runtime/: Cargo.toml
crates/moonlitt-runtime/src/: audio_output.rs  audio_thread.rs  dither.rs  event.rs  lib.rs  midi_input.rs  mixer.rs  runtime.rs  sequencer.rs  session.rs  transport.rs
crates/moonlitt-runtime/tests/: e2e_test.rs  event_test.rs  midi_test.rs  runtime_test.rs  sequencer_test.rs  transport_test.rs
crates/moonlitt-sampler/: Cargo.toml
crates/moonlitt-sampler/src/: backend.rs  envelope.rs  filter.rs  lib.rs  sample.rs  voice.rs  voicepool.rs
crates/moonlitt-sampler/tests/: sf2_parser_robustness.rs  sprint1_voice.rs  sprint2_envelope.rs  sprint3_filter.rs  sprint4_voicepool.rs  sprint5_backend.rs  sprint6_midi_expressiveness.rs
crates/moonlitt-session/: Cargo.toml
crates/moonlitt-session/src/: lib.rs  metronome.rs  offline.rs  persistence.rs  processor.rs  sequencer.rs  transport.rs
crates/moonlitt-session/tests/: keyscape_session_roundtrip.rs  offline_render_test.rs
crates/moonlitt-test-suite/: Cargo.toml
crates/moonlitt-test-suite/snapshots/: compressor_minus18_4to1_sine.json  dattorro_default_sine_440.json  dattorro_user_chain_sine_440.json  eq_default_pseudo_noise.json  silence_through_dattorro.json
crates/moonlitt-test-suite/src/: lib.rs
crates/moonlitt-test-suite/tests/: aes17_compliance.rs  auto_filter_compliance.rs  boundary_robustness.rs  dattorro_compliance.rs  deesser_compliance.rs  distortion_compliance.rs  dither_compliance.rs  dsp_validation.rs  dynamics_compliance.rs  ebu_r128_compliance.rs  effect_silence_invariants.rs  effect_snapshot_regression.rs  eq_cookbook_compliance.rs  gain_staging_compliance.rs  gate_compliance.rs  limiter_compliance.rs  long_run_alloc.rs  midi_compliance.rs  modulation_compliance.rs  multiband_compliance.rs  oversampler_compliance.rs  pitch_shifter_compliance.rs  quality_verification.rs  reverb_compliance.rs  sf2_compliance.rs  source_matrix.rs  utility_compliance.rs
crates/moonlitt-vst3/: Cargo.toml
docs/: 2026-03-27-deep-review-findings.md  embedding-guide.md  keyscape-headless-workflow.md  moonlitt-runtime-design.md  moonlitt-runtime-plan.md
docs/specs/: 2026-03-26-mixer-architecture-design.md  2026-03-26-parameter-system-design.md  2026-03-27-test-suite-design.md  2026-03-28-quality-verification-design.md
examples/bevy-piano-tiles/: Cargo.toml
examples/bevy-piano-tiles/src/: main.rs
examples/ffi-testbed-csharp/: FfiTestbed.csproj  NativeEngine.cs  Program.cs  run.sh
examples/stardew-piano/: README.md
include/: moonlitt.h
(+70 files in other folders)
