[workspace]
resolver = "2"
exclude = ["deps/oxisynth"]
members = [
    "crates/moonlitt-core",
    "crates/moonlitt-vst3",
    "crates/moonlitt-clap",
    "crates/moonlitt-engine",
    "crates/moonlitt-ffi",
    "crates/moonlitt-runtime",
    "crates/moonlitt-cli",
    "crates/moonlitt-resampler",
    "crates/moonlitt-test-suite",
    "crates/moonlitt-sampler",
    "crates/moonlitt-eq",
    "crates/moonlitt-compressor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moonlitt/engine"
