[package]
name = "moonlitt-capi"
description = "C ABI bindings for moonlitt audio engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# The distributable artifact is libmoonlitt.{dylib,so,dll} — one name,
# matching include/moonlitt.h. (The crate itself stays moonlitt-capi.)
name = "moonlitt"
crate-type = ["cdylib", "rlib"]

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3", "clap"] }
moonlitt-audio-io = { path = "../moonlitt-audio-io" }
moonlitt-effects = { path = "../moonlitt-effects" }
moonlitt-session = { path = "../moonlitt-session" }
hound = "3"
base64 = "0.22"
oxisynth = { path = "../../deps/oxisynth/oxisynth" }
