[package]
name = "moonlitt-cli"
description = "Command-line tool for moonlitt audio engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moonlitt"
path = "src/main.rs"

[dependencies]
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3"] }
moonlitt-runtime = { path = "../moonlitt-runtime" }
clap = { version = "4", features = ["derive"] }
