[package]
name = "moonlitt-cli"
description = "Command-line tool for moonlitt audio engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moonlitt"
path = "src/main.rs"

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3", "clap"] }
moonlitt-audio-io = { path = "../moonlitt-audio-io" }
clap = { version = "4", features = ["derive"] }
midly = "0.5"
hound = "3"
