[package]
name = "moonlitt-compressor"
description = "Dynamics compressor — log-domain gain computation, soft knee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }

[dev-dependencies]
approx = "0.5"
