[package]
name = "moonlitt-effects"
description = "Built-in audio effects — dynamics, EQ, spatial processing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }
rustfft = { version = "6", optional = true }

[dev-dependencies]
approx = "0.5"
rustfft = "6"

[features]
default = ["all"]
all = ["dynamics", "eq", "spatial", "modulation", "utility"]
dynamics = ["compressor", "limiter", "gate", "deesser", "multiband-compressor"]
eq = ["parametric-eq"]
spatial = ["reverb", "convolver"]
modulation = ["delay", "chorus", "flanger", "phaser", "tremolo", "auto-filter"]
utility = ["gain", "stereo-width"]
compressor = []
limiter = []
gate = []
deesser = []
multiband-compressor = []
parametric-eq = []
reverb = []
convolver = ["dep:rustfft"]
delay = []
chorus = []
flanger = []
phaser = []
tremolo = []
auto-filter = []
gain = []
stereo-width = []
