[package]
name = "moonlitt-eq"
description = "8-band parametric EQ — Audio EQ Cookbook biquad cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }

[dev-dependencies]
approx = "0.5"
rustfft = "6"
