[package]
name = "moonlitt-ffi"
description = "C FFI layer for moonlitt audio engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3"] }
