[package]
name = "moonlitt-mixer"
description = "Audio mixing graph — tracks, send buses, groups, PDC, metering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2"] }
