[package]
name = "moonlitt-node"
description = "Node.js bindings for moonlitt audio engine via napi-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
moonlitt-core = { path = "../moonlitt-core" }
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3", "clap"] }
moonlitt-audio-io = { path = "../moonlitt-audio-io" }
moonlitt-effects = { path = "../moonlitt-effects", features = ["all"] }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
