[package]
name = "moonlitt-runtime"
description = "Real-time audio runtime — audio output, MIDI input, sequencer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3", "clap"] }
cpal = "0.15"
midir = "0.10"
midly = "0.5"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
rtrb = "0.3"
