[package]
name = "moonlitt-sampler"
description = "Pure Rust SF2 synthesizer with Sinc 72 interpolation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soundfont = { path = "../../deps/soundfont-rs" }
moonlitt-core = { path = "../moonlitt-core" }
moonlitt-resampler = { path = "../moonlitt-resampler" }

[dev-dependencies]
approx = "0.5"
hound = "3"
rustfft = "6"
moonlitt-engine = { path = "../moonlitt-engine" }
