[package]
name = "moonlitt-session"
description = "Platform-agnostic audio session — transport, sequencer, event dispatch, persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hound = "3"
moonlitt-core = { path = "../moonlitt-core" }
moonlitt-mixer = { path = "../moonlitt-mixer" }
moonlitt-engine = { path = "../moonlitt-engine", features = ["sf2", "vst3", "clap"] }
rtrb = "0.3"
midly = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
moonlitt-vst3 = { path = "../moonlitt-vst3" }
